	  and map types
	* Hotspots map page now supports different maps for different networks
	* Hotspots map page now supports different map types for different networks
	  This fixes ticket #69
	* Hotspots map page now offers full multilingual support (text in the
	  JavaScript file was english only)
	* Hotspots map page now uses a Smarty template to render HTML page

2006-02-21 Max Horváth <max.horvath@maxspot.de>
	* fixed access restriction for HTMLeditor in templates folder
	* fixed XML error in HTMLeditors CSS and HTML templates
	* fixed undefined variable bug in content class ContenGroup
	* start page now uses a Smarty template to render HTML page
	* start page now also displays information about deployed/operational nodes
	* information about valid/online users and deployed/operational nodes gets
	  cached if caching has been enabled (valid/online users for 1 minute,
	  deployed/operational nodes for 5 minutes)

2006-02-17 Max Horváth <max.horvath@maxspot.de>
	* refactored lost username site - now it also includes the help toolbox
	* lost username page now focuses input field automaticly (like on login or
	  signup page)
	* refactored lost password site - now it also includes the help toolbox
	* lost password page now focuses input field automaticly (like on login or
	  signup page)
	* refactored sesend validation email site - now it also includes the help
	  toolbox
	* refactored resend validation email page now focuses input field
	  automaticly (like on login or signup page)

2006-02-16 Max Horváth <max.horvath@maxspot.de>
    * added full PHPdoc documentation to Mail class
    * added more temporary-email-address-providers to the black-list
	* Login site now uses a Smarty template to render HTML page
	* refactored signup site - now it also includes the help toolbox
	* removed Phlickr directory in /lib dir as Phlickr must be installed via
	  PEAR
	* modified gen.sh to include new template folders for the
	  translation file generation
